style: unifica tamaño y alineación de botones en barra mayorista

--- a/index.html
+++ b/index.html
@@ -2063,6 +2063,28 @@
                 margin-bottom: 6px;
             }
         }
+        /* Unifica el estilo de todos los botones de la barra mayorista */
+.wholesale-actions button,
+.wholesale-actions .products-btn,
+.wholesale-actions .wholesale-btn {
+    padding: 8px 18px;
+    border-radius: 20px;
+    background: #fff;
+    color: #d97706;
+    font-weight: 600;
+    border: none;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+    cursor: pointer;
+    font-size: 1rem;
+    margin-left: 8px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+}
+/* Opcional: ajusta el margen izquierdo solo para el primer botón */
+.wholesale-actions button:first-child {
+    margin-left: 0;
+}
     </style>
 </head>
 <body>
