fix: corrige sintaxis de etiqueta img para logo externo

--- a/index.html
+++ b/index.html
@@ -2591,34 +2591,10 @@
         <div class="header">
             <div class="logo-section">
                 <div class="logo">
-                    <div class="logo-skyplay">
-                        <div class="logo-icon-original">
-                            <div class="dots-row">
-                                <div class="dot-skyplay"></div>
-                                <div class="dot-skyplay"></div>
-                                <div class="dot-skyplay"></div>
-                                <div class="dot-skyplay"></div>
-                            </div>
-                            <div class="dots-row">
-                                <div class="dot-skyplay"></div>
-                                <div class="dot-skyplay"></div>
-                                <div class="dot-skyplay"></div>
-                                <div class="dot-skyplay"></div>
-                                <div class="dot-skyplay"></div>
-                            </div>
-                            <div class="bars-row">
-                                <div class="bar-skyplay"></div>
-                                <div class="bar-skyplay"></div>
-                                <div class="bar-skyplay"></div>
-                                <div class="bar-skyplay"></div>
-                            </div>
-                        </div>
-                        <div class="divider-line"></div>
-                        <div class="logo-text-original">
-                            <div class="brand-name">Skyplay</div>
-                            <div class="brand-tagline">streaming</div>
-                        </div>
-                    </div>
+                    <img src="https://cdn.barmentech.com/images/skyplay/original-on-transparent.png"
+                         alt="Skyplay"
+                         width={200} height={60}
+                    />
                 </div>
             </div>
 
