chore: prueba de commit adicional para logo externo

--- a/index.html
+++ b/index.html
@@ -2592,8 +2592,8 @@
             <div class="logo-section">
                 <div class="logo">
                     <img src="https://cdn.barmentech.com/images/skyplay/original-on-transparent.png"
-                         alt="Skyplay"
-                         width={200} height={60}
+                         alt="Skyplay"  loading="lazy" decoding="async"
+                         width={400} height={120}
                     />
                 </div>
             </div>
