--- a/index.html
+++ b/index.html
@@ -2592,8 +2592,8 @@
             <div class="logo-section">
                 <div class="logo">
                     <img src="https://cdn.barmentech.com/images/skyplay/original-on-transparent.png"
-                         alt="Skyplay"  loading="lazy" decoding="async"
-                         width={400} height={120}
+                         alt="Skyplay" width="400" height="120" loading="lazy" decoding="async"
+                         
                     />
                 </div>
             </div>
