--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         }
 
         .logo {
-            background: rgba(255, 255, 255, 0.98);
+            background: #1e3c72; /* color azul sólido */
             backdrop-filter: blur(10px);
             padding: 25px 40px;
             border-radius: 20px;
@@ -527,7 +527,7 @@
             position: absolute;
             top: -15px;
             right: 20px;
-            background: linear-gradient(135deg, var(--success) 0%, #059669 100%);
+            background: linear-gradient(135deg, #ef4444 0%, #dc2626 100%);
             color: white;
             padding: 8px 20px;
             border-radius: 50px;
