chore: cambios recientes en index.html

--- a/index.html
+++ b/index.html
@@ -2591,9 +2591,8 @@
         <div class="header">
             <div class="logo-section">
                 <div class="logo">
-                    <img src="https://cdn.barmentech.com/images/skyplay/logo-optimized.png"
-                         alt="Skyplay" width="400" height="120" loading="lazy" decoding="async"
-                         
+                    <img src="https://cdn.barmentech.com/images/skyplay/original-on-transparent.png"
+                         alt="Skyplay" width="400" height="120"                        
                     />
                 </div>
             </div>
