chore: cambios recientes en index.html

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         }
 
         .logo {
-            background: #1e3c72; /* color azul sólido */
+            background: #f0f1f3; /* color azul sólido */
             backdrop-filter: blur(10px);
             padding: 25px 40px;
             border-radius: 20px;
@@ -2591,7 +2591,7 @@
         <div class="header">
             <div class="logo-section">
                 <div class="logo">
-                    <img src="https://cdn.barmentech.com/images/skyplay/original-on-transparent.png"
+                    <img src="https://imgur.com/a/3jzavQ5"
                          alt="Skyplay" width="400" height="120"                        
                     />
                 </div>
