--- a/index.html
+++ b/index.html
@@ -2591,7 +2591,7 @@
         <div class="header">
             <div class="logo-section">
                 <div class="logo">
-                    <img src="https://imgur.com/a/3jzavQ5"
+                    <img src="https://imgur.com/zFY2Nra"
                          alt="Skyplay" width="400" height="120"                        
                     />
                 </div>
