--- a/index.html
+++ b/index.html
@@ -2591,8 +2591,13 @@
         <div class="header">
             <div class="logo-section">
                 <div class="logo">
-                    <img src="https://imgur.com/zFY2Nra"
-                         alt="Skyplay" width="400" height="120"                        
+                    <img src="https://cdn.barmentech.com/images/skyplay/original-on-transparent.png"
+                     alt="Skyplay" 
+                         width="400" 
+                     height="120"
+                     crossorigin="anonymous"
+                     loading="lazy" 
+                      decoding="async"                       
                     />
                 </div>
             </div>
