--- a/index.html
+++ b/index.html
@@ -2591,7 +2591,7 @@
         <div class="header">
             <div class="logo-section">
                 <div class="logo">
-                    <img src="https://cdn.barmentech.com/images/skyplay/original-on-transparent.png"
+                    <img src="originaltransparent.png"
                      alt="Skyplay" 
                          width="400" 
                      height="120"
