fix: use local logo asset for header image

--- a/index.html
+++ b/index.html
@@ -2591,13 +2591,13 @@
         <div class="header">
             <div class="logo-section">
                 <div class="logo">
-                    <img src="originaltransparent.png"
-                     alt="Skyplay" 
+                    <img src="assets/imagen/OriginalTransparent.png"
+                         alt="Skyplay" 
                          width="400" 
-                     height="120"
-                     crossorigin="anonymous"
-                     loading="lazy" 
-                      decoding="async"                       
+                         height="120"
+                         crossorigin="anonymous"
+                         loading="lazy" 
+                         decoding="async"                       
                     />
                 </div>
             </div>
