adding favicon.png

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skyplay Streaming - Planes IPTV para Latinoamérica</title>
+    <title>Skyplay Streaming </title>
+    <link rel="icon" href="assets/imagen/Favicon2.png" type="image/x-icon">
     <meta name="description" content="Los mejores planes de streaming IPTV para Latinoamérica. +1000 canales, series, películas y deportes. Cancela cuando quieras.">
     <style>
         * {
@@ -2591,7 +2592,7 @@
         <div class="header">
             <div class="logo-section">
                 <div class="logo">
-                    <img src="assets/imagen/logo-skyplay.png"
+                    <img src="logo-skyplay.png"
                          alt="Skyplay" 
                          width="150" 
                          height="60"
