--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skyplay Streaming </title>
-    <link rel="icon" href="assets/imagen/Favicon2.png" type="image/x-icon">
+    <link rel="icon" href="assets/imagen/Favicon2.png" type="image/png">
     <meta name="description" content="Los mejores planes de streaming IPTV para Latinoamérica. +1000 canales, series, películas y deportes. Cancela cuando quieras.">
     <style>
         * {
@@ -2592,12 +2592,11 @@
         <div class="header">
             <div class="logo-section">
                 <div class="logo">
-                    <img src="logo-skyplay.png"
+                <img src="assets/imagen/logo-skyplay.png"
                          alt="Skyplay" 
                          width="150" 
                          height="60"
                          crossorigin="anonymous"
-                         loading="lazy" 
                          decoding="async"                       
                     />
                 </div>
