--- a/streaming.html
+++ b/streaming.html
@@ -167,11 +167,32 @@
         .variant-option { display:inline-block; padding:8px 12px; border-radius:999px; background: #f3f4f6; color:#374151; margin:4px; cursor:pointer; font-weight:600; font-size:13px; }
         .variant-option.active { background: var(--primary); color:#fff; }
 
+        /* Pulse hint for new users on variant buttons */
+        @keyframes pulse-border {
+            0% { box-shadow: 0 0 0 0 rgba(99,102,241,0.0); }
+            50% { box-shadow: 0 0 0 6px rgba(99,102,241,0.1); }
+            100% { box-shadow: 0 0 0 0 rgba(99,102,241,0.0); }
+        }
+
+        .variant-option.hint { animation: pulse-border 1.8s infinite ease-in-out; border: 2px solid rgba(99,102,241,0.12); }
+
         /* Feature item styling */
         .feature-item { display:flex; gap:10px; align-items:flex-start; margin-bottom:8px; }
         .feature-icon { width:26px; height:26px; border-radius:6px; display:flex; align-items:center; justify-content:center; font-weight:700; }
         .feature-icon.disabled { opacity:0.45; }
         .feature-text { color:#374151; font-size:14px; }
+
+        /* Inline accordion prototype for details (mobile-first) */
+    .close-details-btn { padding:10px 12px; border-radius:10px; border:none; background:#f3f4f6; color:#111; font-weight:700; cursor:pointer; }
+
+    .card-details { display:none; overflow:hidden; transition: max-height .28s ease, opacity .18s linear; max-height:0; opacity:0; }
+        .card-details[data-open="true"] { display:block; max-height:800px; opacity:1; }
+        .card-details-inner { padding:12px; background:#fff; border-radius:10px; border:1px solid rgba(15,23,42,0.04); box-shadow:0 6px 20px rgba(2,6,23,0.04); }
+
+        @media (min-width:900px) {
+            /* On desktop keep it inline but constrained */
+            .card-details-inner { max-width:520px; }
+        }
 
         /* Responsive avatar sizes */
         @media (max-width: 640px) {
@@ -3502,6 +3523,8 @@ const plans = streamingPlans; // alias used by existing rendering code
 
 // Per-plan variant selection state (index into plan.variants if present)
 let planVariantStates = new Array(streamingPlans.length).fill(0);
+// Track whether a user has interacted with variants for a plan (used to stop pulsing hint)
+let variantTouched = new Array(streamingPlans.length).fill(false);
 
         // Surcharges
         const crSurcharge = 1.50;
@@ -3892,7 +3915,9 @@ let planVariantStates = new Array(streamingPlans.length).fill(0);
                 if (plan.variants && plan.variants.length > 0) {
                     const variantIndex = planVariantStates[index] || 0;
                     const optionsHtml = plan.variants.map((v, i) => {
-                        return `<div class=\"variant-option ${i === variantIndex ? 'active' : ''}\" onclick=\"selectVariant(${index}, ${i})\">${v.label}</div>`;
+                        // for prototype card (index 0) add hint class if user hasn't interacted
+                        const hintClass = (index === 0 && !variantTouched[index]) ? ' hint' : '';
+                        return `<div class=\"variant-option ${i === variantIndex ? 'active' : ''}${hintClass}\" onclick=\"selectVariant(${index}, ${i})\">${v.label}</div>`;
                     }).join('');
                     variantSwitchHTML = `
                         <div class="device-switch-container variant-switch-container">
@@ -3913,6 +3938,9 @@ let planVariantStates = new Array(streamingPlans.length).fill(0);
 
                         ${deviceSwitchHTML}
                         ${variantSwitchHTML}
+                        <div>
+                            <button class="variant-details-btn" onclick="toggleCardDetails(${index})" aria-expanded="false" aria-controls="card-details-${index}" style="margin-top:8px;background:transparent;border:none;color:var(--primary);font-weight:700;cursor:pointer;">Más detalles</button>
+                        </div>
 
                         <div class="plan-price">
                             <span class="plan-price-symbol">$</span>${finalUSDPrice.toFixed(2)}
@@ -3920,14 +3948,26 @@ let planVariantStates = new Array(streamingPlans.length).fill(0);
                         </div>
                         ${localPriceHTML}
                     </div>
-                    <div class="card-features">
-                        ${featuresHTML}
+                    <!-- Compact card: features are shown inside the details panel (hidden by default) -->
+                    <div class="card-details-wrapper">
+                        <div id="card-details-${index}" class="card-details" data-open="false" aria-hidden="true">
+                            <div class="card-details-inner">
+                                <h4 style="margin-bottom:8px;">${plan.name} — Detalles</h4>
+                                <div class="details-features">
+                                    ${featuresHTML}
+                                </div>
+                                <div style="margin-top:12px;display:flex;flex-direction:column;gap:8px;">
+                                    <button class="close-details-btn" onclick="closeCardDetails(${index})">Cerrar</button>
+                                    <button class="subscribe-btn" onclick="showPaymentModal(${index})">${translation.subscribeBtnText}</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-action">
-                        <button class="subscribe-btn" onclick="showPaymentModal(${index})">
-                            ${translation.subscribeBtnText}
-                        </button>
-                    </div>
+                        <div class="card-action">
+                            <button class="subscribe-btn" onclick="showPaymentModal(${index})">
+                                ${translation.subscribeBtnText}
+                            </button>
+                        </div>
                 `;
 
                 container.appendChild(card);
@@ -4007,9 +4047,53 @@ function selectVariant(planIndex, variantIndex) {
     if (!planVariantStates || !Array.isArray(planVariantStates)) {
         planVariantStates = new Array(plans.length).fill(0);
     }
+    const previous = planVariantStates[planIndex] || 0;
+    // Update variant
     planVariantStates[planIndex] = variantIndex;
     // Re-render cards to reflect new selection
     generatePricingCards();
+
+    // mark that the user touched variants for this plan (stop hinting)
+    variantTouched[planIndex] = true;
+
+    // Prototype behavior for card 0: toggle details when selecting variants
+    if (planIndex === 0) {
+        // If user clicked the same variant again -> close details
+        if (previous === variantIndex) {
+            // small timeout to allow DOM re-render
+            setTimeout(() => { closeCardDetails(0); }, 60);
+        } else {
+            // If different variant selected -> open details showing the new content
+            setTimeout(() => { openCardDetails(0); }, 60);
+        }
+    }
+}
+
+// Accordion controls for prototype card
+function toggleCardDetails(index) {
+    const el = document.getElementById(`card-details-${index}`);
+    const btn = document.querySelector(`.variant-details-btn[onclick*="${index}"]`);
+    if (!el) return;
+    const open = el.getAttribute('data-open') === 'true';
+    if (open) closeCardDetails(index); else openCardDetails(index);
+}
+
+function openCardDetails(index) {
+    const el = document.getElementById(`card-details-${index}`);
+    const btn = document.querySelector(`.variant-details-btn[onclick*="${index}"]`);
+    if (!el) return;
+    el.setAttribute('data-open', 'true');
+    el.setAttribute('aria-hidden', 'false');
+    if (btn) btn.setAttribute('aria-expanded', 'true');
+}
+
+function closeCardDetails(index) {
+    const el = document.getElementById(`card-details-${index}`);
+    const btn = document.querySelector(`.variant-details-btn[onclick*="${index}"]`);
+    if (!el) return;
+    el.setAttribute('data-open', 'false');
+    el.setAttribute('aria-hidden', 'true');
+    if (btn) btn.setAttribute('aria-expanded', 'false');
 }
 
 function closeProductsMenuOnClickOutside(event) {
